@startuml
' Configuración de colores y estilos
skinparam classBackgroundColor #E6E6FA
skinparam classBorderColor #4682B4
skinparam classArrowColor #4682B4
skinparam classFontColor #000080
skinparam classAttributeFontColor #000080
skinparam classFontSize 12
skinparam noteBackgroundColor #FFFACD
skinparam noteBorderColor #8B4513
skinparam linetype ortho

' Clases principales dispuestas en una estructura semi-vertical
class Usuario {
    + registrarDatosPersonales()
    + registrarRasgosFisicos()
    + subirFotografias()
    + editarInformacion()
}

class Sistema {
    + crearRegistroDelincuente()
    + registrarDirecciones()
    + registrarAlias()
    + registrarCaracteristicasFisicas()
    + almacenarFotografias()
    + actualizarCaracteristicasFisicas()
    + actualizarFotografias()
}

class Criminals {
    + id: int
    + nombres: string
    + apellidoPaterno: string
    + apellidoMaterno: string
    + cedulaIdentidad: string
    + fechaNacimiento: date
    + edad: int
    + lugarNacimiento: string
    + nacionalidad: string
    + estadoCivil: string
    + ocupacion: string
    + lugarResidencia: string
    + direccion: string
    + personaReferencia: string
    + relacionReferencia: string
    + domicilioReferencia: string
}

class CriminalAddresses {
    + id: int
    + criminalId: int
    + pais: string
    + estadoDepartamento: string
    + ciudadMunicipio: string
}

class CriminalAliases {
    + id: int
    + criminalId: int
    + alias: string
}

class PhysicalCharacteristics {
    + id: int
    + criminalId: int
    + estatura: float
    + peso: float
    + complexion: string
    + colorPiel: string
    + sexo: string
    + genero: string
    + tipoOjos: string
    + tipoNariz: string
    + tipoLabios: string
    + tipoOrejas: string
    + caracteristicasParticulares: string
}

class Photographs {
    + id: int
    + criminalId: int
    + fotografiaRostro: string
    + fotografiaPerfilIzquierdo: string
    + fotografiaCuerpoCompleto: string
    + fotografiaMedioCuerpo: string
    + fotografiaPerfilDerecho: string
    + fotografiaAdicional: string
    + fotografiaEnBarra: string
}

' Relaciones entre clases
Usuario --> Sistema : Usa
Sistema --> Criminals : Crea
Sistema --> CriminalAddresses : Registra
Sistema --> CriminalAliases : Registra
Sistema --> PhysicalCharacteristics : Registra
Sistema --> Photographs : Almacena
Sistema --> PhysicalCharacteristics : Actualiza
Sistema --> Photographs : Actualiza

' Notas explicativas


note right of Criminals
    Representa los datos generales
    de los delincuentes registrados.
end note

note right of CriminalAddresses
    Almacena las direcciones asociadas
    a los delincuentes.
end note

note right of CriminalAliases
    Registra los alias utilizados por los delincuentes.
end note

note right of PhysicalCharacteristics
    Define las características físicas
    de los delincuentes.
end note

note right of Photographs
    Almacena las fotografías asociadas
    a los delincuentes.
end note

' Disposición semi-vertical
Usuario -[hidden]-> Sistema
Sistema -[hidden]-> Criminals
Criminals -[hidden]-> CriminalAddresses
CriminalAddresses -[hidden]-> CriminalAliases
CriminalAliases -[hidden]-> PhysicalCharacteristics
PhysicalCharacteristics -[hidden]-> Photographs

' Ajuste de posición para balancear vertical y horizontalmente
Usuario -[hidden]right-> Sistema
Sistema -[hidden]right-> Criminals
Criminals -[hidden]down-> CriminalAddresses
CriminalAddresses -[hidden]down-> CriminalAliases
CriminalAliases -[hidden]down-> PhysicalCharacteristics
PhysicalCharacteristics -[hidden]down-> Photographs

@enduml